docs: 更新springboot版本文档

--- a/docs/.vuepress/theme/styles/module/code.styl
+++ b/docs/.vuepress/theme/styles/module/code.styl
@@ -14,3 +14,7 @@ div[class*='language-']
   &::before
     color rgba(219,73,132, 0.8)
     font-weight 600
+
+  .highlight-lines
+    .highlighted
+      background-color rgb(196,240,223)
